@@ -56,7 +56,8 @@ typedef struct dvd_input_s *dvd_input_t;
  * These functions provide the main API.
  */
 extern dvd_input_t (*dvdinput_open)  (const char *,
-                                      void *, dvd_reader_stream_cb *);
+                                      void *, dvd_reader_stream_cb *,
+                                      dvd_reader_logf extlog );
 extern int         (*dvdinput_close) (dvd_input_t);
 extern int         (*dvdinput_seek)  (dvd_input_t, int);
 extern int         (*dvdinput_title) (dvd_input_t, int);
